--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
+$primary: pink;
+
 html, body { height: 100%; }
 body {
   color: white;
@@ -7,4 +9,11 @@ body {
   padding: 0;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+a {
+  color: white;
+  &:hover{
+    color: $primary;
+  }
 }
